--- a/src/components/molecules/Map/styles.css
+++ b/src/components/molecules/Map/styles.css
@@ -1,11 +1,26 @@
-#mapContainer{
-    max-width: 100%;
-    max-height: 100%;
-    /* height: 60vh !important; */
+#map{
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
     height: 100%;
 }
 
-.ol-unselectable{
-    max-width: 100%;
-    max-height: 100%; 
-}
+.map:-moz-full-screen {
+    height: 100%;
+    width: 100%;
+  }
+  .map:-webkit-full-screen {
+    height: 100%;
+    width: 100%;
+  }
+  .map:-ms-fullscreen {
+    height: 100%;
+    width: 100%;
+  }
+  .map:fullscreen {
+    height: 100%;
+    width: 100%;
+  }
+  .ol-rotate {
+    top: 3em;
+  }
