--- a/src/components/molecules/Map/styles.css
+++ b/src/components/molecules/Map/styles.css
@@ -24,3 +24,8 @@
   .ol-rotate {
     top: 3em;
   }
+
+  .ol-zoom-in, .ol-zoom-out, .ol-zoomslider-thumb, .ol-full-screen-false, .ol-full-screen-true {
+    background-color: #212121 !important;
+    color: #BDBDBD !important;
+  }
